Hooked up list, home, & detail view to backend

--- a/frontend/src/recipeComponents/home.css
+++ b/frontend/src/recipeComponents/home.css
@@ -15,6 +15,7 @@ html,body
     background-size: cover;
     color: white;
     background-position: center;
+    font-family:'Times New Roman', Times, serif;
 }
 
 .home-page {
