Added user recipe list view

--- a/frontend/src/recipeComponents/recipeList.css
+++ b/frontend/src/recipeComponents/recipeList.css
@@ -18,6 +18,10 @@ body ::-webkit-scrollbar {
     margin-right: auto;
 }
 
+.checkbox-wrapper {
+    color: rgb(255, 103, 0);
+}  
+
 .searchIcon {
     width: 20px;
     position: relative;
