--- a/frontend/src/recipeComponents/recipeCreate.css
+++ b/frontend/src/recipeComponents/recipeCreate.css
@@ -3,10 +3,10 @@ html, body {
     width: 100%;
     margin: 0px;
     padding: 0px;
+    background-image: linear-gradient(to bottom,rgb(255, 103, 0),rgb(255, 103, 0,.5));
 }
 
 .create-background {
-    background-image: linear-gradient(to bottom,rgb(255, 103, 0),rgb(255, 103, 0,.5));
     height: 100%;
     color: white;
     font-family: 'Times New Roman', Times, serif;
@@ -15,7 +15,7 @@ html, body {
 .form-wrapper {
     background-color: rgb(255, 255, 255, .5);
     border-radius: 10px;
-    margin-top: 10px;
+    margin-bottom: 2rem;
 }
 
 #recipe-image {
